--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,23 +29,21 @@ jobs:
             UserKnownHostsFile=/dev/null" > ~/.ssh/config
           chmod 600 ~/.ssh/config
 
-      # Probar conexión SSH
-      - name: Test SSH connection
+      # Crear el directorio remoto si no existe
+      - name: Create remote directory
         run: |
-          ssh -i ~/.ssh/id_rsa ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} "echo 'Connection test successful'"
+          ssh -i ~/.ssh/id_rsa ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} "sudo mkdir -p /root/docs && sudo chown ${{ secrets.VPS_USER }} /root/docs"
 
-      # Transferir archivos al VPS
-      - name: Transfer project files to VPS
-        env:
-          RSYNC_RSH: "ssh -i ~/.ssh/id_rsa"
+      # Sincronizar archivos con rsync
+      - name: Sync files to VPS
         run: |
-          rsync -avz --delete ./ ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }}:/home/${{ secrets.VPS_USER }}/my-docusaurus-site
+          rsync -avz --delete ./ ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }}:/root/docs
 
-      # Ejecutar Docker Compose en el VPS para lanzar en producción
-      - name: Deploy on VPS
+      # Ejecutar el contenedor en el VPS
+      - name: Deploy Docusaurus
         run: |
-          ssh -i ~/.ssh/id_rsa ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} "
-            cd /home/${{ secrets.VPS_USER }}/my-docusaurus-site/docusaurus &&
-            docker-compose down &&
-            docker-compose up -d --build
-          "
+          ssh -i ~/.ssh/id_rsa ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} << 'EOF'
+            cd /root/docs
+            docker-compose down
+            docker-compose up -d
+          EOF
