--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,8 +33,8 @@ jobs:
       - name: Create remote directory
         run: |
           ssh -i ~/.ssh/id_rsa ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} "sudo mkdir -p /root/ && sudo chown ${{ secrets.VPS_USER }} /root/"
-          ssh -i ~/.ssh/id_rsa ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} "sudo mkdir -p /root/ && sudo chown ${{ secrets.VPS_USER }} /root/caddy"
-          ssh -i ~/.ssh/id_rsa ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} "sudo mkdir -p /root/ && sudo chown ${{ secrets.VPS_USER }} /root/docusaurus"
+          ssh -i ~/.ssh/id_rsa ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} "sudo mkdir -p /root/caddy && sudo chown ${{ secrets.VPS_USER }} /root/caddy"
+          ssh -i ~/.ssh/id_rsa ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} "sudo mkdir -p /root/docusaurus && sudo chown ${{ secrets.VPS_USER }} /root/docusaurus"
 
       # Sincronizar archivos con rsync
       - name: Sync files to VPS
