--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,34 +32,18 @@ jobs:
       # Crear el directorio remoto si no existe
       - name: Create remote directory
         run: |
-          ssh -i ~/.ssh/id_rsa ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} "sudo mkdir -p /root/ && sudo chown ${{ secrets.VPS_USER }} /root/"
-          ssh -i ~/.ssh/id_rsa ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} "sudo mkdir -p /root/caddy && sudo chown ${{ secrets.VPS_USER }} /root/caddy"
-          ssh -i ~/.ssh/id_rsa ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} "sudo mkdir -p /root/docusaurus && sudo chown ${{ secrets.VPS_USER }} /root/docusaurus"
+          ssh -i ~/.ssh/id_rsa ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} "sudo mkdir -p /root/docs && sudo chown ${{ secrets.VPS_USER }} /root/docs"
 
       # Sincronizar archivos con rsync
       - name: Sync files to VPS
         run: |
-          rsync -avz --delete ./ ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }}:/root/
+          rsync -avz --delete ./ ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }}:/root/docs
 
       # Ejecutar el contenedor en el VPS
-      - name: Deploy Caddy
-        run: |
-          ssh -i ~/.ssh/id_rsa ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} << 'EOF'
-            cd /root/caddy
-            docker-compose down
-            docker-compose up -d
-          EOFs
-
       - name: Deploy Docusaurus
         run: |
           ssh -i ~/.ssh/id_rsa ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} << 'EOF'
-            cd /root/docusaurus
-            npm install
-            npm run build
+            cd /root/docs
             docker-compose down
             docker-compose up -d
           EOF
-
-
-
-          
