--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,66 +1,28 @@
-name: Self-hosted deployment
-
-on:
-  push:
-    branches:
-      - master
-  workflow_dispatch:
-
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-
+      
       - name: Install dependencies
         run: |
           sudo apt-get update
           sudo apt-get install -y sshpass rsync
 
-      # Configurar la llave SSH
       - name: Set up SSH key
         run: |
           mkdir -p ~/.ssh/
-          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_ed25519
+          chmod 600 ~/.ssh/id_ed25519
           ssh-keyscan -H ${{ secrets.VPS_HOST }} >> ~/.ssh/known_hosts
           echo "Host ${{ secrets.VPS_HOST }}
+            IdentityFile ~/.ssh/id_ed25519
             StrictHostKeyChecking no
             UserKnownHostsFile=/dev/null" > ~/.ssh/config
           chmod 600 ~/.ssh/config
 
-      # Crear el directorio remoto si no existe
-      - name: Create remote directory
+      # Probar la conexión SSH con la clave id_ed25519
+      - name: Test SSH connection
         run: |
-          ssh -i ~/.ssh/id_rsa ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} "sudo mkdir -p /root && sudo chown ${{ secrets.VPS_USER }} /root"
-
-      # Sincronizar archivos del repositorio al VPS
-      - name: Sync files to VPS
-        run: |
-          rsync -avz --delete ./ ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }}:/root
-
-      # Instalar dependencias y construir el proyecto de Docusaurus en el VPS
-      - name: Install dependencies and build Docusaurus
-        run: |
-          ssh -i ~/.ssh/id_rsa ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} "
-            cd /root/docusaurus &&
-            npm install &&
-            npm run build
-          "
-
-      # Configurar la red de Docker si no existe
-      - name: Ensure Docker network exists
-        run: |
-          ssh -i ~/.ssh/id_rsa ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} "
-            docker network inspect web || docker network create web
-          "
-
-      # Iniciar Caddy y Docusaurus con Docker Compose en el VPS
-      - name: Launch Docker services
-        run: |
-          ssh -i ~/.ssh/id_rsa ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} "
-            cd /root/caddy &&
-            docker-compose down &&
-            docker-compose up -d --build
-          "
+          ssh -i ~/.ssh/id_ed25519 ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} "echo 'Connection test successful'"
