feat(deploy): test conection 2

--- a/.github/workflows/test-ssh.yml
+++ b/.github/workflows/test-ssh.yml
@@ -1,27 +1,23 @@
-name: Test SSH Connection
+name: Test SSH Connection to VPS
 
 on:
-  workflow_dispatch:  # Permite ejecutar el flujo manualmente desde GitHub
+  workflow_dispatch: 
 
 jobs:
-  test-ssh:
+  ssh-connection:
     runs-on: ubuntu-latest
+
     steps:
-      # Instalar dependencias necesarias en el runner de GitHub Actions
-      - name: Install dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y sshpass
+      - name: Check out repository
+        uses: actions/checkout@v3
 
-      # Configurar la llave SSH
-      - name: Set up SSH key
-        run: |
-          mkdir -p ~/.ssh/
-          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_ed25519
-          chmod 600 ~/.ssh/id_ed25519
-          ssh-keyscan -H ${{ secrets.VPS_HOST }} >> ~/.ssh/known_hosts
-
-      # Probar la conexión SSH con el servidor VPS
-      - name: Test SSH connection
-        run: |
-          ssh -i ~/.ssh/id_ed25519 ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} "echo 'Connection successful'"
+      - name: Connect to VPS and run commands
+        uses: appleboy/ssh-action@v0.1.7
+        with:
+          host: ${{ secrets.VPS_HOST }}
+          username: ${{ secrets.VPS_USER }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          port: 22
+          script: |
+            echo "Conexión exitosa al VPS"
+            # Aquí puedes agregar otros comandos de prueba para ejecutarlos en el VPS
