--- a/.github/workflows/test-ssh.yml
+++ b/.github/workflows/test-ssh.yml
@@ -14,20 +14,7 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v2
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '18'  # You can specify the Node.js version you need
-
-      - name: Install Dependencies
-        working-directory: ./docusaurus  # Specify the Docusaurus directory
-        run: npm install
-
-      - name: Build Docusaurus
-        working-directory: ./docusaurus
-        run: npm run build
-
-      - name: Set up SSH Key
+      - name: Set up SSH key
         run: |
           mkdir -p ~/.ssh
           echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
@@ -42,9 +29,9 @@ jobs:
           ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa root@188.245.182.111 \
           'rm -rf /root/* && echo "Cleaned up /root directory"'
 
-      - name: Transfer Built Files to VPS
+      - name: Transfer Files to VPS
         run: |
-          scp -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa -r ./docusaurus/build/* root@188.245.182.111:/root/docusaurus
+          scp -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa -r ./* root@188.245.182.111:/root/
 
       - name: Check Docker Network for Caddy
         run: |
@@ -60,6 +47,17 @@ jobs:
         run: |
           ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa root@188.245.182.111 \
           'cd /root/caddy && docker-compose up -d'
+
+      
+      - name: Handle Docusaurus on VPS
+        run: |
+          ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa root@188.245.182.111 << 'EOF'
+            set -e  # Detener la ejecución si ocurre un error
+            cd /root/docusaurus
+            npm install
+            npm run build
+            docker-compose up -d
+          EOF
 
       - name: Final Verification
         run: |
