feat(deploy): test point

--- a/test/docker-compose.yml
+++ b/test/docker-compose.yml
@@ -7,3 +7,9 @@ services:
       - "8443:80"
     volumes:
       - ./index.html:/usr/share/nginx/html/index.html
+    networks:
+      - caddy
+
+networks:
+  caddy:
+    external: true
