feat(deplot):health_check

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,16 +1,16 @@
-name: Test connection docker network
+name: health-check CI/CD
 
 on:
   workflow_run:
     workflows:
-      - "Deploy to VPS and start Caddy" 
+      - "Deploy to VPS and start Caddy"
     types:
-      - completed  
+      - completed
 
 jobs:
-  docusaurus-build-and-deploy:
+  health-check:
     runs-on: ubuntu-latest
-
+    
     steps:
       - name: Set up SSH key
         run: |
@@ -18,6 +18,18 @@ jobs:
           echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
 
-      - name: Test SSH Connection
+      - name: Test SSH Connection and manage Docker containers
         run: |
-          ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa root@188.245.182.111 'echo "Connection successful"'
+          ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa root@188.245.182.111 '
+            echo "Connection successful" &&
+            echo "Checking Docker and Docker Compose..." &&
+            which docker &&
+            which docker-compose &&
+            docker --version &&
+            docker-compose --version &&
+            echo "Navigating to project directory..." &&
+            cd /root/health-check/ &&
+            echo "Starting Docker Compose..." &&
+            docker-compose up -d &&
+            echo "Containers started successfully"
+          '
