--- a/health-check/docker-compose.yml
+++ b/health-check/docker-compose.yml
@@ -1,8 +1,8 @@
 version: '3'
 services:
-  test:
+  health_check:
     image: nginx:alpine
-    container_name: test
+    container_name: health_check
     ports:
       - "8443:80"
     volumes:
