--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,6 +33,13 @@ jobs:
             echo "Starting health-check container..." &&
             cd /root/health-check &&
             docker-compose up -d &&
+
+            echo "Deploying Next.js application..." &&
+            cd /root/enriqueteruel &&    
+            docker-compose down &&
+            docker-compose pull || true &&
+            docker-compose build --no-cache &&
+            docker-compose up -d &&
             
             echo "Showing running containers:" &&
             docker ps
