feat(zai): init zai container arm64 maria

--- a/zai/docker-compose.yml
+++ b/zai/docker-compose.yml
@@ -18,8 +18,8 @@ services:
       - caddy
 
   db:
-    image: arm64v8/mysql:5.7
-    container_name: mysql
+    image: arm64v8/mariadb:10.5
+    container_name: mariadb
     restart: always
     environment:
       MYSQL_DATABASE: wp_database
