--- a/wordpress/docker-compose.yml
+++ b/wordpress/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.8'
 services:
   wordpress:
     image: arm64v8/wordpress:latest
-    container_name: zai
+    container_name: wordpress
     restart: always
     ports:
       - "3001:80"
