--- a/node/docker-compose.yml
+++ b/node/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - .:/app
       - /app/node_modules
     environment:
-      - NODE_ENV=development
+      - NODE_ENV=production
     networks:
       - caddy
 
